AndroidManifest.xml configure

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".wifiMVC"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +22,7 @@
         </activity>
         <activity android:name=".DatabaseMain" />
         <activity android:name=".MenuDemo" />
-        <activity android:name=".mapinit"></activity>
+        <activity android:name=".mapinit" />
     </application>
 
 </manifest>
